--- a/src/housewifei/config.json
+++ b/src/housewifei/config.json
@@ -1,3 +1,12 @@
 {
-  "CONFIG": "example"
+  "nb_controllers": 3,
+  "controllers": {
+      "0": "ControlledLight",
+      "1": "ControlledHeater",
+      "2": "LightSensor"
+  },
+  "nb_rules":0,
+  "rules": {
+
+  }
 }
